# SuperLottoNumberGenerator

./: .gitignore  CMakeLists.txt  README.md  lottoengine.cpp  lottoengine.h  main.cpp  mainwindow.cpp  mainwindow.h
android/: AndroidManifest.xml
