cmake_minimum_required(VERSION 3.16)

project(SuperLottoNumberGenerator VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)

set(PROJECT_SOURCES
        main.cpp
        mainwindow.cpp
        mainwindow.h
        mainwindow.ui
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(SuperLottoNumberGenerator
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
        lottoengine.h lottoengine.cpp
        # android/res/mipmap-mdpi/ic_launcher.png android/res/mipmap-mdpi/ic_launcher_round.png
        # android/res/mipmap-xhdpi/ic_launcher.png android/res/mipmap-xhdpi/ic_launcher_round.png
        # android/res/mipmap-xxhdpi/ic_launcher.png android/res/mipmap-xxhdpi/ic_launcher_round.png
        # android/res/mipmap-xxxhdpi/ic_launcher.png android/res/mipmap-xxxhdpi/ic_launcher_round.png
        # android/res/mipmap-hdpi/ic_launcher.png android/res/mipmap-hdpi/ic_launcher_round.png
        # android/AndroidManifest.xml
        # android/playstore/play_store_icon.png
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET SuperLottoNumberGenerator APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(SuperLottoNumberGenerator SHARED
            ${PROJECT_SOURCES}
        )
      set_target_properties(SuperLottoNumberGenerator PROPERTIES
        QT_ANDROID_APP_NAME "超级大乐透号码生成器")

      # 设置图标基础名称和资源文件夹路径
      set_target_properties(SuperLottoNumberGenerator PROPERTIES
          QT_ANDROID_APP_ICON "ic_launcher"   # 对应 res/mipmap-*/icon.png 文件
      )

      # 设置包含自定义 Android 资源的文件夹路径
      set_property(TARGET SuperLottoNumberGenerator APPEND PROPERTY
          QT_ANDROID_PACKAGE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/android
      )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(SuperLottoNumberGenerator
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(SuperLottoNumberGenerator PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.SuperLottoNumberGenerator)
endif()
set_target_properties(SuperLottoNumberGenerator PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS SuperLottoNumberGenerator
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(SuperLottoNumberGenerator)
endif()
